add: login y panel control

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-
-<span> Oh que fueee!!!</span>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <router-outlet></router-outlet>
