--- a/src/app/presentation/login/components/login.component.html
+++ b/src/app/presentation/login/components/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+
+<div class="login">
+  <mat-card class="container">
+
+    <!-- Título -->
+    <mat-card-header>
+      <mat-card-title>Login</mat-card-title>
+    </mat-card-header>
+
+    <!-- Inputs -->
+    <mat-card-content>
+
+      <form class="example-form">
+        <mat-form-field class="example-full-width">
+          <mat-label>Usuario</mat-label>
+          <input matInput placeholder="Ingresa tu usuario">
+        </mat-form-field>
+      
+        <mat-form-field class="example-full-width">
+          <mat-label>Contraseña</mat-label>
+          <input type="password" matInput placeholder="Ingresa tu contraseña">
+        </mat-form-field>
+      </form>
+
+    </mat-card-content>
+
+    <!-- Login -->
+    <div class="button-login">
+      <button class="col-md-8" mat-raised-button color="primary">Ingresar</button>
+    </div>
+  </mat-card>
+</div>
