--- a/src/app/presentation/shared/components/sidebar/components/sidebar.component.css
+++ b/src/app/presentation/shared/components/sidebar/components/sidebar.component.css
@@ -15,5 +15,15 @@ mat-drawer-container {
   margin: 0px !important;
   padding: 0px !important;
   height: 100%;
+}
 
+mat-list-item {
+  margin-bottom: 1s5px !important;
+  cursor: pointer !important;
+  text-align: center !important;
+}
+
+mat-expansion-panel {
+  width: auto !important;
+  height: 100% !important;
 }
