--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 html {
@@ -12,4 +16,8 @@ body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;;
+}
+
+.center-content {
+  @apply flex justify-center;
 }
