--- a/src/app/presentation/login/components/login.component.html
+++ b/src/app/presentation/login/components/login.component.html
@@ -1,5 +1,5 @@
-
 <div class="login md:w-full md:h-full h-full center-content place-items-center">
+
   <mat-card class="md:w-2/6 w-10/12 md:h-auto h-auto md:p-5">
 
     <!-- Título -->
@@ -15,7 +15,7 @@
           <mat-label>Usuario</mat-label>
           <input matInput placeholder="Ingresa tu usuario">
         </mat-form-field>
-      
+
         <mat-form-field class="md:w-full w-full">
           <mat-label>Contraseña</mat-label>
           <input type="password" matInput placeholder="Ingresa tu contraseña">
@@ -26,7 +26,9 @@
 
     <!-- Botón Login -->
     <div class="center-content md:py-2">
-      <button class="md:w-2/4 md:bg-slate-800 md:text-gray-50" mat-raised-button color="primary" (click)="login()">Ingresar</button>
+      <button class="md:w-2/4 md:bg-slate-800 md:text-gray-50" mat-raised-button color="primary"
+        (click)="login()">Ingresar</button>
     </div>
   </mat-card>
+  
 </div>
