--- a/src/app/presentation/shared/components/menu/menu.component.html
+++ b/src/app/presentation/shared/components/menu/menu.component.html
@@ -1,13 +1,23 @@
-<mat-toolbar>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+<mat-toolbar class="md:bg-slate-800 md:text-gray-200 md:font-light">
+
+  <!-- Icono de Menú -->
+  <button mat-icon-button class="">
     <mat-icon>menu</mat-icon>
   </button>
+
+  <!-- Título -->
   <span>Gestión de usuarios</span>
-  <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+
+  <span class="example-spacer">
+  </span>
+
+  <!-- Iconos -->
+  <button mat-icon-button class="">
     <mat-icon>favorite</mat-icon>
   </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+
+  <button mat-icon-button aria-label="Example icon-button with share icon">
     <mat-icon>share</mat-icon>
   </button>
+
 </mat-toolbar>
