add: implementación de API para obtener a todos los usuarios

--- a/src/app/presentation/pages/user/list/list.component.html
+++ b/src/app/presentation/pages/user/list/list.component.html
@@ -1,45 +1,106 @@
-<div class="md:w-full w-full md:h-full h-full md:m-5 center-content">
+<div class="bg-zinc-300 md:w-full md:h-full col-span-1 md:col-span-1 lg:col-span-1">
 
   <!-- Filtros -->
-  <mat-card class="md:w-10/12 md:h-1/6 h-1/6 md:p-5 p-5 flex center-content flex-col">
+  <div class=" md:w-full grid justify-items-center align-content-center">
 
-    <div class="gap-8 columns-3 center-content">
-      <div class="md:w-3/12 md:mx-5 md:h-auto h-auto">
-        <mat-form-field>
-          <mat-label>Fecha Inicio</mat-label>
-          <input matInput [matDatepicker]="picker">
-          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
+    <mat-card class="md:w-12/12 flex center-content flex-col md:m-6">
+
+      <div class="gap-8 columns-3 flex justify-around md:p-4">
+
+        <div class="md:w-3/12 md:h-auto h-auto">
+          <mat-form-field>
+            <mat-label>Fecha Inicio</mat-label>
+            <input matInput [matDatepicker]="picker">
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        </div>
+
+        <div class="md:w-3/12 md:h-auto h-auto">
+          <mat-form-field>
+            <mat-label>Fecha Fin</mat-label>
+            <input matInput [matDatepicker]="picker2">
+            <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
+            <mat-datepicker #picker2></mat-datepicker>
+          </mat-form-field>
+        </div>
+
+        <div class="md:w-3/12 md:h-auto h-auto">
+          <mat-form-field appearance="fill">
+            <mat-label>Estado</mat-label>
+            <mat-select>
+              <mat-option *ngFor="let food of foods" [value]="food.value">
+                {{food.viewValue}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
       </div>
 
-      <div class="md:w-3/12 md:mx-5 md:h-auto h-auto">
-        <mat-form-field>
-          <mat-label>Fecha Fin</mat-label>
-          <input matInput [matDatepicker]="picker2">
-          <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
-          <mat-datepicker #picker2></mat-datepicker>
-        </mat-form-field>
+      <!-- Botón Login -->
+      <div class="column-1 flex justify-center md:pb-2">
+        <div class="md:w-3/12 center-content md:py-2">
+          <button class="md:w-full md:bg-slate-800 md:text-gray-50" mat-raised-button color="primary">Buscar</button>
+        </div>
       </div>
+    </mat-card>
 
-      <div class="md:w-3/12 md:mx-5 md:h-auto h-auto">
-        <mat-form-field appearance="fill">
-          <mat-label>Estado</mat-label>
-          <mat-select>
-            <mat-option *ngFor="let food of foods" [value]="food.value">
-              {{food.viewValue}}
-            </mat-option>
-          </mat-select>
+    <section class="md:w-6/12">
+
+      <mat-card class="grid justify-items-center align-content-center md:pt-5">
+
+        <mat-form-field class="md:w-10/12 md:m-auto">
+          <mat-label>Buscar usuarios</mat-label>
+          <input matInput type="text">
+          <button matSuffix aria-label="Clear">
+            <mat-icon>close</mat-icon>
+          </button>
         </mat-form-field>
-      </div>
+
+      </mat-card>
+
+    </section>
+
+
+    <!-- Tabla de contenido -->
+
+    <div class="mat-elevation-z8 md:w-10/12 md:my-14">
+      <table mat-table [dataSource]="dataSource">
+    
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+    
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+    
+        <!-- Weight Column -->
+        <ng-container matColumnDef="weight">
+          <th mat-header-cell *matHeaderCellDef> Weight </th>
+          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        </ng-container>
+    
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="symbol">
+          <th mat-header-cell *matHeaderCellDef> Symbol </th>
+          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                     showFirstLastButtons
+                     aria-label="Select page of periodic elements">
+      </mat-paginator>
     </div>
+    
 
-    <!-- Botón Login -->
-    <div class="column-1 flex justify-center">
-      <div class="md:w-3/12 center-content md:py-2">
-        <button class="md:w-full md:bg-slate-800 md:text-gray-50" mat-raised-button color="primary">Buscar</button>
-      </div>
-    </div>
-  </mat-card>
-
+  </div>
 </div>
